Fix pill/status alignment for smaller screens

--- a/app/assets/stylesheets/application_redesign.scss
+++ b/app/assets/stylesheets/application_redesign.scss
@@ -303,5 +303,6 @@ label.btn-close {
     line-height: 1.45em;
     padding-block: 0.1rem;
     padding-inline-end: 0.45rem;
+    text-wrap: nowrap;
   }
 }
